--- a/src/assets/styles/main/components/_package.scss
+++ b/src/assets/styles/main/components/_package.scss
@@ -62,6 +62,10 @@
 
 			&:nth-child(2) {
 				border-left: 1px solid $color-off-white;
+				@include max-screen($breakpoint-phone) {
+					border-left: 0;
+					border-top: 1px solid $color-off-white;
+				}
 			}
 
 			&.is-active {
